# project2

./: .env.example  .gitignore  EXECUTION_LOG.md  MANIFEST.in  README.md  RESUME.md  pyproject.toml  setup.py  test_plan.md  trading_monitoring.md
backend/trading_monitor/: __init__.py  api.py  backtest.py  config.py  demo.py  ibkr.py  ibkr_probe.py  indicators.py  market_hours.py  models.py  monitoring.py  news.py  risk.py  runtime.py  signal_engine.py  storage.py  telegram.py  yahoo.py
backend/trading_monitor/static/: index.html
scripts/: start_app.sh
tests/: test_api_optional.py  test_config.py  test_indicators_signal.py  test_market_hours.py  test_monitoring_backtest.py  test_news_ibkr_models.py  test_runtime.py  test_static_dashboard.py  test_storage_risk_telegram.py
