[project]
name = "intraday-investment-monitor"
version = "0.1.0"
description = "Local-only intraday investment monitoring and suggestion app"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
ibkr = [
  "ib_insync>=0.9.86",
]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py39"

